<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191414"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_login"
        android:layout_width="333dp"
        android:layout_height="126dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/login_img"
        android:src="@drawable/zelda_botw_logo"
        app:layout_constraintBottom_toTopOf="@+id/button_login_monsters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_monsters"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="167dp"
        android:background="#4ea2c6"
        android:text="@string/login_text_monsters"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_login_materials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_materials"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="53dp"
        android:background="#4ea2c6"
        android:text="@string/login_text_materials"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />
</androidx.constraintlayout.widget.ConstraintLayout>